--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vorgabe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sandcat-web-solutions.github.io/M450_TestingProjekt/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.1.2",
