--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -22,8 +22,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,29 +35,14 @@ jobs:
         run: npm install
       - name: Test
         run: npm run test
+      - name: Check test status
+        if: ${{ failure() }}
+        run: exit 1  # Terminate the workflow if the test fails
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test  # Make sure 'build' job runs only if 'test' job is successful
+    steps:
       - uses: actions/checkout@v3
       - name: Build and Deploy React app to GitHub Pages
         uses: omkartapale/react-deployment-gh-pages@v1.0.0
-#      - name: Build
-#        run: npm run build
-#      - name: Setup Pages
-#        uses: actions/configure-pages@v3
-#      - name: Build with Jekyll
-#        uses: actions/jekyll-build-pages@v1
-#        with:
-#          source: ./build
-#          destination: ./_site
-#      - name: Upload artifact
-#        uses: actions/upload-pages-artifact@v2
-#
-#  # Deployment job
-#  deploy:
-#    environment:
-#      name: github-pages
-#      url: ${{ steps.deployment.outputs.page_url }}
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Deploy to GitHub Pages
-#        id: deployment
-#        uses: actions/deploy-pages@v2
