--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -22,26 +22,26 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-      - name: Install dependencies
-        run: npm install
-      - name: Test
-        run: npm run test
-      - name: Check test status
-        if: ${{ failure() }}
-        run: exit 1  # Terminate the workflow if the test fails
+  #  test:
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - name: Checkout
+  #        uses: actions/checkout@v3
+  #      - name: Setup Node.js
+  #        uses: actions/setup-node@v2
+  #        with:
+  #          node-version: '18'
+  #      - name: Install dependencies
+  #        run: npm install
+  #      - name: Test
+  #        run: npm run test
+  #      - name: Check test status
+  #        if: ${{ failure() }}
+  #        run: exit 1  # Terminate the workflow if the test fails
 
   build:
     runs-on: ubuntu-latest
-    needs: test  # Make sure 'build' job runs only if 'test' job is successful
+    #    needs: test  # Make sure 'build' job runs only if 'test' job is successful
     steps:
       - uses: actions/checkout@v3
       - name: Build and Deploy React app to GitHub Pages
