--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -5,44 +5,57 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: [ "master", "develop" ]
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-#  # Allows you to run this workflow manually from the Actions tab
-#  workflow_dispatch:
-#
-## Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-#permissions:
-#  contents: read
-#  pages: write
-#  id-token: write
-#
-## Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-## However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-#concurrency:
-#  group: "pages"
-#  cancel-in-progress: false
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  #  test:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - name: Checkout
-  #        uses: actions/checkout@v3
-  #      - name: Setup Node.js
-  #        uses: actions/setup-node@v2
-  #        with:
-  #          node-version: '18'
-  #      - name: Install dependencies
-  #        run: npm install
-  #      - name: Test
-  #        run: npm run test
-  #      - name: Check test status
-  #        if: ${{ failure() }}
-  #        run: exit 1  # Terminate the workflow if the test fails
-
+  # Build job
   build:
     runs-on: ubuntu-latest
-    #    needs: test  # Make sure 'build' job runs only if 'test' job is successful
     steps:
-      - uses: actions/checkout@v3
-      - name: Build and Deploy React app to GitHub Pages
-        uses: omkartapale/react-deployment-gh-pages@v1.0.0
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Test
+        run: npm run test
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./build
+          destination: ./build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+  
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
