--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "cross-env": "^7.0.3",
     "history": "^5.3.0",
@@ -32,9 +33,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "browserslist": {
     "production": [
